# CppVideoStreamer

./: .clang-tidy  .pre-commit-config.yaml  .pre-commit-search-and-replace.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  VideoStreamerTCP.cpp  config.yaml  encoder.cpp  encoder.hpp  usbCameraFrameGrabber.cpp  usbCameraFrameGrabber.hpp  xiApiPlusOcv.hpp  ximeaCameraFrameGrabber.cpp  ximeaCameraFrameGrabber.hpp
src/receiver/: CMakeLists.txt  Decoder.cpp  Decoder.h  VideoPlayer.cpp  decoder.cpp  decoder.h  video_player.cpp
src/sender/: CMakeLists.txt  VideoStreamerTCP.cpp  config.yaml  encoder.cpp  encoder.hpp  tcpSocket.cpp  tcpSocket.hpp  tcp_socket.cpp  tcp_socket.hpp  usbCameraFrameGrabber.cpp  usb_camera_frame_grabber.cpp  usb_camera_frame_grabber.hpp  video_streamer_tcp.cpp  xiApiPlusOcv.cpp  xiApiPlusOcv.hpp  xi_api_plus_ocv.cpp  xi_api_plus_ocv.hpp  ximeaCameraFrameGrabber.cpp  ximeaCameraFrameGrabber.hpp  ximea_camera_frame_grabber.cpp  ximea_camera_frame_grabber.hpp
